# MCTS

./: HEX.py  Hex.py  MCTS.py  Main.py  NIM.py  NeuralNet.py  Nim.py  README.md  TwoPlayerGame.py  config.py  helpers.py  play_online.py  pyproject.toml
src/: Board.py  Hex.py  MCTS.py  MyActorClient.py  MyHexActor.py  NeuralNet.py  Nim.py  Node.py  RLSystem.py  Tournament.py  TwoPlayerGame.py  config.py  helpers.py
