[tool.poetry]
name = "mcts"
version = "0.1.0"
description = ""
authors = ["chrisdybdahl <chrisdybdahl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.20.0"
numpy = "^2.3.3"
matplotlib = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
